# AmonUsDetector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_nan_loss.py  demo.ipynb  draw_img.py  inference.py  inference_video.py  my_demo.ipynb  pyproject.toml  train.py
logs/fcos_training/version_0/: events.out.tfevents.1765114001.torfinhell-Predator-PHN16-71.184217.0
logs/fcos_training/version_1/: events.out.tfevents.1765114021.torfinhell-Predator-PHN16-71.184567.0
logs/fcos_training/version_10/: events.out.tfevents.1765117854.torfinhell-Predator-PHN16-71.232079.0
logs/fcos_training/version_2/: events.out.tfevents.1765114046.torfinhell-Predator-PHN16-71.185007.0
logs/fcos_training/version_3/: events.out.tfevents.1765114202.torfinhell-Predator-PHN16-71.187022.0
logs/fcos_training/version_4/: events.out.tfevents.1765114221.torfinhell-Predator-PHN16-71.187482.0
logs/fcos_training/version_5/: events.out.tfevents.1765114343.torfinhell-Predator-PHN16-71.188494.0
notebooks/: download_vidoes.ipynb
scripts/: check_data.py  create_face_db.py  create_test_from_video.py  download_videos.py  download_xml_ckpt.py  extract_frames.py  extract_texts.py  gdrive_download.py  generate.py  inference_qwen.py  test_from_annotations.py
src/configs/: __init__.py  all_configs.py  fcos_pretrained.py  pred_config.py  training_config.py
src/data_module/: __init__.py  data_config.py  datamodule.py  dataset.py  generate.py  utils.py
src/datasets/: images.py
src/losses/: __init__.py  fcos_loss.py
src/metrics/: __init__.py  mAP.py  metric_config.py  utils.py
src/models/: __init__.py  all_models.py  fcos.py  fcos_pretrained.py  models_config.py
src/transforms/: __init__.py  fcos_transform.py
src/utils/: __init__.py  bboxes.py  calc_grad_norm.py  color_utils.py  files_utils.py  init_utils.py  iou.py  lr_finder.py  nms.py  random_utils.py  training_utils.py  video_names.py
(+4 files in other folders)
