[project]
name = "amonusdetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "cairosvg>=2.8.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "progressbar2>=4.5.0",
    "pytubefix>=10.3.5",
]
